@startuml PlatformServerlessEntities

!define ABSTRACT abstract

skinparam backgroundColor #FFFFFF
skinparam classBackgroundColor #FFF8DC
skinparam classBorderColor #333333
skinparam arrowColor #333333
skinparam linetype ortho

' ═════════════════════════════════════════════════════════════════════════════
' DOMAIN ENTITIES ONLY
' ═════════════════════════════════════════════════════════════════════════════

class User {
  +String id (UUID)
  +String username
  +String email
  +String role (ENUM)
  +String ownerId (for team members)
  +boolean suspended
  +LocalDateTime createdAt
}

class App {
  +String id (UUID)
  +String name
  +String userId (FK)
  +String imageName
  +String imageTag
  +String url
  +String status
  +String serviceName
  +String namespace
  +Integer port
  +Integer minReplicas
  +Integer maxReplicas
  +String cpuRequest
  +String memoryRequest
  +LocalDateTime deployedAt
  +LocalDateTime updatedAt
}

class KafkaTopic {
  +String id (UUID)
  +String name (unique)
  +Integer partitions
  +Integer replicas
  +String userId
  +String config
  +LocalDateTime createdAt
  +LocalDateTime updatedAt
}

class KafkaSource {
  +String id (UUID)
  +String name
  +String userId
  +String kafkaTopicId (FK)
  +String consumerGroup
  +String bootstrapServers
  +String namespace
  +Boolean ready
  +LocalDateTime createdAt
  +LocalDateTime updatedAt
}

class Trigger {
  +String id (UUID)
  +String name
  +String userId
  +String kafkaSourceId (FK)
  +String subscriberName
  +String brokerName
  +String filter
  +String action
  +Boolean active
  +LocalDateTime createdAt
  +LocalDateTime updatedAt
}

class Metric {
  +String id (UUID)
  +String appId (FK)
  +String userId
  +Double cpu
  +Double memory
  +Double requests
  +Double latencyP95
  +Double errorRate
  +LocalDateTime timestamp
}

class BillingSnapshot {
  +String id (UUID)
  +String userId
  +String appId (FK)
  +String serviceName
  +String namespace
  +double cpuVcpu
  +double memoryGb
  +int replicas
  +double uptimeFactor
  +double cpuCost
  +double memoryCost
  +double totalCost
  +LocalDateTime snapshotTime
}

class DeploymentLog {
  +String id (UUID)
  +String appId (FK)
  +String appName
  +String userId
  +String message
  +String type
  +LocalDateTime createdAt
}

enum UserRole {
  ADMIN
  CLIENT_ADMIN
  DEVELOPER
  VIEWER
  BILLING_MANAGER
}

' ═════════════════════════════════════════════════════════════════════════════
' RELATIONSHIPS BETWEEN ENTITIES
' ═════════════════════════════════════════════════════════════════════════════

User --> UserRole : has

User "1" --> "0..*" App : owns
User "1" --> "0..*" KafkaTopic : owns
User "1" --> "0..*" KafkaSource : owns
User "1" --> "0..*" Trigger : owns
User "1" --> "0..*" Metric : generates
User "1" --> "0..*" BillingSnapshot : billed for
User "1" --> "0..*" DeploymentLog : creates

App "1" --> "0..*" Metric : generates metrics
App "1" --> "0..*" BillingSnapshot : tracked by
App "1" --> "0..*" DeploymentLog : has logs

KafkaTopic "1" --> "0..*" KafkaSource : produces events
KafkaSource "1" --> "0..*" Trigger : drives

@enduml
